<resources>
    <string name="app_name">Quiz App</string>

    <string name="q1">Question 1</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">Question 4</string>
    <string name="question1">What is the latest version of Android ?</string>
    <string name="question2">What is name of the complier in Android ?</string>
    <string name="question3">Are You a robot ? If no slide in the range of 50%-70%.</string>
    <string name="question4">Tell us your good name ?</string>
    <string name="button_next">Next</string>
    <string name="hintName">Enter your name...</string>
    <string name="q1o1">Android Pie</string>
    <string name="q1o2">Android 10</string>
    <string name="q1o3">Android Marshmallow</string>
    <string name="q1o4">Android 11</string>
    <string name="button_submit">Submit</string>
    <string name="incorrect">Incorrect</string>
    <string name="correct">Correct</string>
    <string name="empty_text">--</string>
    <string name="q2o1">JVM</string>
    <string name="q2o2">Kotlin</string>
    <string name="q2o3">Dalvik</string>
    <string name="q2o4">Ardruino</string>
    <string name="points">Points</string>
    <string name="score_heading">SCORE</string>
</resources>
